# 2023-hackathon

./: AzureOpenAIServer.py  NOTE.md  README  RedisServer.py  connectAzure.py  createEmbeddingLibrary.py  createTextFromPdfDocs.py  extractDocumentText.py  main.py  pyproject.toml  questions.json
output/: 10_NOTE_Follow-up 4_31 JUL 2018.txt  11_NOTE_Follow-up 5_28 AUG 2018.txt  12_RAD_CT Follow-up 2_15 OCT 2018.txt  13_NOTE_Follow-up 6_16 OCT 2018.txt  14_NOTE_Follow-up 7_13 NOV 2018.txt  15_RAD_CT Follow-up 3_07 JAN 2019.txt  16_NOTE_Follow-up 8_08 JAN 2019.txt  2_PATH_Biopsy_12 APR 2018.txt  3_RAD_PETCT_Baseline_19 APR 2018.txt  4_PATH_HER2_Fish_26 APR 2018.txt  5_NOTE_Initial Consultation_01 MAY 2018.txt  6_NOTE_Follow-up 1_08 MAY 2018.txt  7_NOTE_Follow-up 2_29 MAY 2018.txt  8_NOTE_Follow-up 3_18 JUN 2018.txt  9_RAD_CT_Follow-up 1_23 JUL 2018.txt
